<resources>
    <string name="app_name">CalorieKeeper</string>
    <string name="some_date">23.01.2022</string>
    <string name="some_calorie">1500 / 1500 \n ccal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="summary">Summary:</string>
    <string name="calories_main">Calories:</string>
    <string name="protein_main">Protein:</string>
    <string name="fats_main">Fats:</string>
    <string name="settings">Settings</string>
    <string name="carbohydrates_main">Carbo \nhydrates:</string>
    <string name="some_calorie_statistic">1500 / 1500 ccal</string>
    <string name="some_grams">100 / 100 g</string>
    <string name="daily_rate">Daily rate:</string>
    <string name="enter_calories">enter calories</string>
    <string name="gram">gram</string>

</resources>