<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appbarBackground"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:elevation="4dp"
            android:src="@drawable/background_appbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_back"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/appbarBackground"
            app:layout_constraintStart_toStartOf="@id/appbarBackground"
            app:layout_constraintTop_toTopOf="@id/appbarBackground" />

        <TextView
            android:id="@+id/tv_appbar_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:elevation="4dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/appbarBackground"
            app:layout_constraintEnd_toStartOf="@id/bt_settings"
            app:layout_constraintStart_toEndOf="@id/bt_back"
            app:layout_constraintTop_toTopOf="@id/appbarBackground" />

        <ImageButton
            android:id="@+id/bt_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_settings"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/appbarBackground"
            app:layout_constraintEnd_toEndOf="@id/appbarBackground"
            app:layout_constraintTop_toTopOf="@id/appbarBackground" />

        <TextView
            android:id="@+id/tv_daily_rate"
            style="@style/title_subscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_rate"
            app:layout_constraintBottom_toTopOf="@+id/tv_calories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbarBackground"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_calories"
            style="@style/title_subscreen_subtitle"
            android:layout_marginTop="68dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_main"
            app:layout_constraintBottom_toTopOf="@+id/tv_protein"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_daily_rate" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_calories"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toEndOf="@+id/tv_calories"
            app:layout_constraintTop_toTopOf="@id/tv_calories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_calories"/>


        <TextView
            android:id="@+id/tv_protein"
            style="@style/title_subscreen_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/protein_main"
            app:layout_constraintBottom_toTopOf="@+id/tv_fats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_calories" />

        <TextView
            android:id="@+id/tv_fats"
            style="@style/title_subscreen_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/fats_main"
            app:layout_constraintBottom_toTopOf="@+id/tv_carbohydrates"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_protein" />

        <TextView
            android:id="@+id/tv_carbohydrates"
            style="@style/title_subscreen_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="68dp"
            android:text="@string/carbohydrates_main"
            app:layout_constraintBottom_toTopOf="@+id/bt_breakfast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fats" />

        <Button
            android:id="@+id/bt_breakfast"
            style="@style/bt_meal"
            android:layout_marginTop="40dp"
            android:text="@string/breakfast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_carbohydrates" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>